# op-automic

./: .dockerignore  .env.example  .gitignore  .releaserc.json  Dockerfile  LICENSE  README.md  pyproject.toml  release-please-config.json  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-title.yml  release.yml
docs/: IMPLEMENTATION_PLAN.md  ISSUES.md  RESEARCH_PHASE7.md
examples/: calendar.yaml  job.yaml  schedule.yaml  variable.yaml  workflow.yaml
revisions/Job/: A.jsonl  J.jsonl  J1.jsonl  ORPHAN.jsonl  SILENT.NEW.jsonl  X.jsonl
revisions/Workflow/: WF1.jsonl
src/op_aromic/: __init__.py  api.py  logging.py
tests/: conftest.py  test_api.py  test_cli.py  test_logging.py
tests/cli/: test_apply.py  test_apply_progress.py  test_auth.py  test_config_flags.py  test_destroy.py  test_export.py  test_failure_hints.py  test_global_flags.py  test_history_rollback.py  test_json_output.py  test_output.py  test_plan.py  test_validate.py
tests/client/: test_api.py  test_auth.py  test_http.py
tests/config/: test_settings.py  test_yaml_source.py
tests/engine/: test_applier.py  test_dependency.py  test_destroyer.py  test_differ.py  test_exporter.py  test_ledger.py  test_loader.py  test_normalizer.py  test_normalizer_calendar.py  test_normalizer_job.py  test_normalizer_schedule.py  test_normalizer_variable.py  test_normalizer_workflow.py  test_parallel.py  test_planner.py  test_revision.py  test_round_trip.py  test_serializer.py  test_validator.py  test_versioning_integration.py  test_versioning_pipeline.py  (+1 more)
(+56 files in other folders)
