[project]
name = "op-aromic"
version = "0.1.0"
description = "GitOps CLI for Broadcom Automic Workload Automation"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lkshrk" }]
readme = "README.md"

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2",
    "structlog>=24",
    "deepdiff>=7",
    "pyyaml>=6",
]

[project.scripts]
aromic = "op_aromic.cli.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/op_aromic"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: tests that hit a live Automic instance",
]

[tool.coverage.run]
source = ["op_aromic"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
